# uCLbench

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README
arith_speed/: CMakeLists.txt  arith_speed.cpp
branch_penalty/: CMakeLists.txt  bp_kernel.cl  branch_penalty.cpp  oclutils.h
buffer_bandwidth/: CMakeLists.txt  buffer_bandwidth.cpp
cllib/: CMakeLists.txt  clcommon.cpp  clcommon.h  clinfo.cpp  clinfo.h
kernel_overheads/: CMakeLists.txt  kernel_overheads.cpp  testdata_loc.h
mem_latency/: CMakeLists.txt  constant_latency.cl  global_latency.cl  local_latency.cl  mem_latency.cpp
mem_streaming/: CMakeLists.txt  mem_streaming.cl  mem_streaming.cpp
